# htsh-ai

./: .dockerignore  .gitignore  CLAUDE.MD  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
contract_audit/: config.py  main.py  requirements.txt  test_markitdown.py  update_rules.py
contract_audit/models/: database.py  schema.py
contract_audit/routers/: ai_config.py  audit.py  rule.py
contract_audit/services/: ai_client.py  auditor.py  parser.py
contract_audit/static/: app.js  index.html  styles.css
contract_audit/tests/: test_ai_client.py
docs/: 2026-04-10-合同智能审核-设计.md  已有的审核意见.md  需求.md
scripts/: setup_windows.ps1
