[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-audit"
version = "1.0.0"
description = "基于 AI 的合同智能审核程序"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-docx==1.1.0",
    "pymupdf==1.23.26",
    "httpx==0.26.0",
    "aiosqlite==0.19.0",
    "pydantic==2.6.1",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["contract_audit"]

[tool.pytest.ini_options]
testpaths = ["contract_audit/tests"]
